# Anime-Royale-Wiki

./: .gitignore  404.html  index.html  pyproject.toml  sitemap.xml  tailwind.config.js
ar_wiki/: mkdocs.yml
ar_wiki/Templates/: item_page_template.html  unit_individual_template.html  unit_page_template.html
ar_wiki/data/: data_cleaner.py  description_builder.py  full_raw_data.json  unit_description.json  units.json
ar_wiki/docs/: index.md  item_page.md  unit_page.md
ar_wiki/src/: config.py  input.css
assets/css/: extra.css  tailwind.css
assets/js/: item-filter.js  unit-filter.js
data-parser/: EXPORT_PART_1.lua  parse.py  rbxm_data_scraper.lua
data-parser/DropData/: challenges.lua  dungeons.lua  infinite.lua  legends.lua  raids.lua  rift.lua  story.lua
data-parser/EvoData/: evo.lua
data-parser/Items/: ItemPart1.lua
data-parser/Map/: MapPart1.lua
data-parser/Units/: UnitPart2.lua  UnitPart3.lua  UnitPart4.lua
item_page/: index.html
notebooks/: dropdata_testing.ipynb  item_data_testing.ipynb  map_data_testing.ipynb  unit_data_testing.ipynb
search/: search_index.json
unit_page/: index.html
units/adult-gokan/: index.html
units/akatou/: index.html
units/aligator/: index.html
units/alize/: index.html
units/almighty/: index.html
units/ant-general/: index.html
units/atomic-warrior/: index.html
units/aura-farmer/: index.html
units/aura-farmer-purple/: index.html
units/aura-king/: index.html
units/aura-king-monarch/: index.html
units/aura-king-shadow/: index.html
units/aya/: index.html
units/bean/: index.html
(+670 files in other folders)
