[project]
name = "anime-royale-wiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "mkdocs-material>=9.7.1",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pymdown-extensions>=10.20",
]
